--- a/appengine/standard_python3/hello_world/app.yaml
+++ b/appengine/standard_python3/hello_world/app.yaml
@@ -12,4 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-runtime: python39
+runtime: python312
+service: flask-headers
